tests/format/flow-repo/promises/resolve_void.js
// @flow

(Promise.resolve(): Promise<number>); // error

(Promise.resolve(undefined): Promise<number>); // error
